Figures and updates
Figure files added along with several text updates.

--- a/index.html
+++ b/index.html
@@ -19,4 +19,8 @@ layout: default
 
   <p>Our work is supported by the National Institutes of Health and Emory University.</p>
 
+  <img align="left" src="Greenneurons.png" width="75" height="75" />
+
+  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="75" height="75" />
+
 </div>
