--- a/index.html
+++ b/index.html
@@ -19,8 +19,10 @@ layout: default
 
   <p>Our work is supported by the National Institutes of Health and Emory University.</p>
 
-  <img align="left" src="Greenneurons.png" width="75" height="75" />
+  <img align="left" src="Greenneurons.png" width="100" height="100" />
 
-  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="75" height="75" />
+  <img align="center" src="IPScellnanogandIPSneuron.png" width="100" height="100" />
+
+  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="100" height="100" />
 
 </div>
