--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@ layout: default
 
 <div class="home">
 
+  <img align="left" src="Greenneurons.png" width="100" height="100" />
+
+  <img align="middle" src="IPScellnanogandIPSneuron.png" width="100" height="100" />
+
+  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="100" height="100" />
+  
   <h1 class="main">A Brief Overview</h1>
 
   <p>The <b>Hales Lab</b> is a molecular biology lab in the Emory University School of Medicine and
@@ -19,10 +25,6 @@ layout: default
 
   <p>Our work is supported by the National Institutes of Health and Emory University.</p>
 
-  <img align="left" src="Greenneurons.png" width="100" height="100" />
 
-  <img align="center" src="IPScellnanogandIPSneuron.png" width="100" height="100" />
-
-  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="100" height="100" />
 
 </div>
