--- a/index.html
+++ b/index.html
@@ -4,9 +4,7 @@ layout: default
 
 <div class="home">
 
-  <img align="left" src="Greenneurons.png" width="100" height="100" />
-
-  <img align="right" src="IPSneuronsonMEAcopy.jpg" width="100" height="100" />
+  <img align="left" src="Greenneurons.png" width="150" height="150" />
 
   <h1 class="main">A Brief Overview</h1>
 
@@ -23,6 +21,6 @@ layout: default
 
   <p>Our work is supported by the National Institutes of Health and Emory University.</p>
 
-
+  <img align="left" src="IPSneuronsonMEAcopy.jpg" width="150" height="150" />
 
 </div>
