--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@ layout: default
 
   <img align="left" src="Greenneurons.png" width="150" height="150" />
 
-  <h1 class="main">A Brief Overview</h1>
+     <h1 class="main">A Brief Overview</h1>
 
-  <p>The <b>Hales Lab</b> is a molecular biology lab in the Emory University School of Medicine and
-    <a href="http://www.cnd.emory.edu/">Emory Unversity's Center for
-    Neurodegenerative Disease</a> led by Chad Hales MD,PhD.</p>
+     <p>The <b>Hales Lab</b> is a molecular biology lab in the Emory University School of Medicine and
+       <a href="http://www.cnd.emory.edu/">Emory Unversity's Center for
+         Neurodegenerative Disease</a> led by Chad Hales MD,PhD.</p>
 
   <p>We study the molecular mechanisms of <b>Alzheimer's Disease</b>, <b>frontotemporal dementia</b>,
     and related neurodegenerative disorders.
@@ -19,8 +19,14 @@ layout: default
     sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, and
     <b>microelectrode array recordings</b> (MEA).
 
-  <p>Our work is supported by the National Institutes of Health and Emory University.</p>
-
   <img align="left" src="IPSneuronsonMEAcopy.jpg" width="150" height="150" />
+
+  <img align="right" src="IPScellnanogandIPSneuron.png" width="150" height="75" />
+
+
+  
+
+
+    <p>Our work is supported by the National Institutes of Health and Emory University.</p>
 
 </div>
