--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
 
-  <img align="left" src="Greenneurons.png" width="150" height="150" />
+  <img align="top" src="Greenneurons.png" width="150" height="150" />
 
      <h1 class="main">A Brief Overview</h1>
 
