More page and figure updates

--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@ layout: default
 
 <div class="home">
 
-  <img align="top" src="Greenneurons.png" width="150" height="150" />
+<figure>
+  <img src="NPC_blue_hoechst_green_nestin_red_sox2.png" alt="Green neurons" align="top" width="300" height="150">
+  <figcaption>Human IPSc derived neural progenitor cells:
+    <p>blue-hoechst, green-nestin, red-sox2</figcaption>
+</figure>
 
      <h1 class="main">A Brief Overview</h1>
 
@@ -19,6 +23,6 @@ layout: default
     sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, and
     <b>microelectrode array recordings</b> (MEA).
 
-  <p>Our work is supported by the National Institutes of Health and Emory University.</p>
+  <p>Our work is supported by the National Institute of Neurological Disorders and Stroke and Emory University.</p>
 
 </div>
