People and funding update

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@ layout: default
     sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, and
     <b>microelectrode array recordings</b> (MEA).
 
-  <p>Our work is supported by the National Institute of Neurological Disorders and Stroke and Emory University.</p>
+  <p>Our work is supported by the National Institute of Neurological Disorders and Stroke, the Department of Defense and Emory University.</p>
 
 </div>
