--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
        <a href="http://www.cnd.emory.edu/">Emory Unversity's Center for
          Neurodegenerative Disease</a> led by Chad Hales MD,PhD.</p>
 
-  <p>We study the molecular mechanisms of <b>Alzheimer's Disease</b>, <b>frontotemporal dementia</b>,
+  <p>We study the molecular mechanisms of <b>Alzheimer's Disease</b>, <b>frontotemporal dementia</b>, <b>chronic traumatic encephalopathy</b>,
     and related neurodegenerative disorders.
 
   <p>We use a combination of <b>molecular biology techniques</b>, <b>proteomic
