--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ layout: default
     and related neurodegenerative disorders.
 
   <p>We use a combination of <b>molecular biology techniques</b>, <b>proteomic
-    sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, and
+    sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, <b/>transgenic mouse models<b/>, and
     <b>microelectrode array recordings</b> (MEA).
 
   <p>Our work is supported by the National Institute of Neurological Disorders and Stroke, the Department of Defense, the BrightFocus Foundation and Emory University.
