--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: default
     sequencing</b>, <b>immunohistochemistry</b> of postmortem human brain, <b>induced pluripotent stem cells<b/>, <b/>transgenic mouse models<b/>, and
     <b>microelectrode array recordings</b> (MEA).
 
-  <p>Our work is supported by the National Institute of Neurological Disorders and Stroke, the Department of Defense, the BrightFocus Foundation and Emory University.
-    We are most grateful for support from these organizations</p>
+  <p>We have previous received funding from the National Institute of Aging, the National Institute of Neurological Disorders and Stroke, the Department of Defense, the BrightFocus Foundation and Emory University.
+    We are most grateful for support from these organizations.</p>
 
 </div>
